# Hack-a-ton-airflow

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml  sftp_ingestion_dag.py  values.yaml
dags/: sftp_ingestion_dag.py
logs/scheduler/: latest
