[tool.poetry]
name = "hack-a-ton-airflow"
version = "0.1.0"
description = ""
authors = ["Ruud Cools <ruud.cools@tennet.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
default = true
name = "nexus"
url = "https://nexus.cloud.local/repository/pypi/simple/"